[build] fix fat jar, UseCompactObjectHeaders